# Micro_flow_PI4

./: .gitignore  CHANGELOG_DEBUG.md  CMakeLists.txt  PROJECT_DOCUMENTATION.md  README.md  reexport_model.py  train_and_export.py  训练模型.txt
.claude/: settings.local.json
docs/: SUMMARY.md  conv.md  gemm.md  layers.md  memory.md  runtime.md
examples/: image_demo.cpp  image_inference.cpp  image_preprocess.cpp  mnist_demo.cpp  web_demo.cpp
include/microflow/: allocator.hpp  conv.hpp  gemm.hpp  image.hpp  layers.hpp  runtime.hpp  tensor.hpp
models/: mnist_improved.mflow
src/conv/: conv.cpp
src/gemm/: gemm.cpp
src/layers/: layers.cpp
src/memory/: allocator.cpp  image.cpp  tensor.cpp
src/runtime/: runtime.cpp
tests/: benchmark.cpp  test_image.cpp  test_tensor.cpp
tools/: csv_to_bin.py  reexport_model.py  trainData.csv  train_and_export.py  train_mixed.py
